<resources>
    <string name="app_name">Reservation</string>
    <string name="musteriDetay">Customer Details</string>
    <string name="isimful"><font size="15">Full Name</font></string>
    <string name="tel"><font size="15">Phone Number</font></string>
    <string name="rezDetay">Reservation Details</string>
    <string name="kisiSayisi"><font size="15">Party</font></string>
    <string name="masa_secin">Choose A Table</string>
    <string name="saat">Time  :  </string>
    <string name="tarih">Date  :  </string>
    <string name="not"><font size="15">Notes</font></string>
    <string name="btnKaydet">Save</string>
    <string name="ara">Search</string>
    <string name="dateformate">dd/MM/yyyy</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>

    <string name="fullnameKontrol">Please fill the required fields</string>
    <string name="partyKontrol">please do not leave party field empty</string>
    <string name="phoneKontrol"></string>
    <string name="masanoKontrol"> please choose table</string>
    <string name="dateKontrol">please choose date </string>
    <string name="timeKontrol">please choose time </string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="Update_message">Are you sure you want to Update?</string>
    <string name="hangiTarih">!!You entered an invalid date</string>
    <string name="mSec">Choose Table</string>

    <string name="backup_data">Backup data</string>
    <string name="import_data">Import data</string>
    <string name="backup_before_import">Do you want backup curren database before import an old databas?</string>
    <string name="backup_export">Do you want sure export this database?</string>
    <string name="select_file">Select file</string>
    <string name="backup_empty">Backup file is empty</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cbmulti">OK</string>
    <string name="customerList">CUSTOMER LIST</string>

    <string-array name="note_saat">
        <item>-Choose-</item>
        <item>17 : 00</item>
        <item>17 : 15</item>
        <item>17 : 30</item>
        <item>17 : 45</item>
        <item>18 : 00</item>
        <item>18 : 15</item>
        <item>18 : 30</item>
        <item>18 : 45</item>
        <item>19 : 00</item>
        <item>19 : 15</item>
        <item>19 : 30</item>
        <item>19 : 45</item>
        <item>20 : 00</item>
        <item>20 : 15</item>
        <item>20 : 30</item>
        <item>20 : 45</item>
        <item>21 : 00</item>
        <item>21 : 15</item>
        <item>21 : 30</item>
        <item>21 : 45</item>
        <item>22 : 00</item>
        <item>22 : 15</item>
        <item>22 : 30</item>
        <item>22 : 45</item>
        <item>23 : 00</item>
        <item>23 : 15</item>
        <item>23 : 30</item>
        <item>23 : 45</item>
        <item>00 : 00</item>
    </string-array>
    <string-array name="ringtone_list">
        <item>Arrived</item>
        <item>Didnt Come</item>
        <item>Left</item>
    </string-array>

</resources>
